--- a/estilos/style.css
+++ b/estilos/style.css
@@ -133,3 +133,32 @@ form > a.botao:hover{
 form > a.botao i{
     font-size: 0.8em;
 }
+
+@media  screen and (min-width: 600px) and (max-width: 780px) {
+    
+    section#login {
+        width: 80vw;
+        height: 350px;
+    }
+
+    section#login > div#imagem {
+        float: left;
+        width: 30%;
+        height: 100%;
+    }
+
+    section#login > div#formulario {
+        float: right;
+        width: 70%;
+    }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario > p{
+    font-size: 1em;
+    margin: 20px 0px;
+    }
+    
+}
